Xors3dIndie(withSamples)_750/headers/CPP/inc/xors3d.h

// Object handle typedef
typedef int Handle;
// 3dlines commands
X3DDECL Handle X3DCALL xCreateLine3D(float fromX, float fromY, float fromZ, float toX, float toY, float toZ, int red = 255, int green = 255, int blue = 255, int alpha = 255, bool useZBuffer = true);
X3DDECL void X3DCALL xLine3DOrigin(Handle line3d, float x, float y, float z, bool isGlobal = false);
X3DDECL void X3DCALL xLine3DAddNode(Handle line3d, float x, float y, float z, bool isGlobal = false);
X3DDECL void X3DCALL xLine3DColor(Handle line3d, int red, int green, int blue, int alpha);
X3DDECL void X3DCALL xLine3DUseZBuffer(Handle line3d, bool state);
X3DDECL float X3DCALL xLine3DOriginX(Handle line3d, bool isGlobal = false);
X3DDECL float X3DCALL xLine3DOriginY(Handle line3d, bool isGlobal = false);
X3DDECL float X3DCALL xLine3DOriginZ(Handle line3d, bool isGlobal = false);
X3DDECL int X3DCALL xLine3DNodesCount(Handle line3d);
X3DDECL void X3DCALL xLine3DNodePosition(Handle line3d, int index, float x, float y, float z, bool isGlobal = false);