Xors3dIndie(withSamples)_750/headers/C#/xors3d.cs

//*****************************************************************
//*                                                               *
//* Xors3d Engine header file for C#, (c) 2012 XorsTeam           *
//* www:    http://xors3d.com                                     *
//* e-mail: support@xors3d.com                                    *
//*                                                               *
//*****************************************************************

using System;
using System.Text;
using System.Runtime.InteropServices;

public class Xors3d
{
	// Log levels
	public const int LOG_NO            = 5;
	public const int LOG_FATAL         = 4;
	public const int LOG_ERROR         = 3;
	public const int LOG_WARNING       = 2;
	public const int LOG_MESSAGE       = 1;
	public const int LOG_INFO          = 0;

	// Log targets
	public const int LOG_HTML             = 1;
	public const int LOG_COUT             = 2;
	public const int LOG_STRING           = 4;

	// Skinning types
	public const int SKIN_SOFTWARE = 2;
	public const int SKIN_HARDWARE = 1;

	// Light sources types
	public const int LIGHT_DIRECTIONAL = 1;
	public const int LIGHT_POINT       = 2;
	public const int LIGHT_SPOT        = 3;

	// Texture filtering
	public const int TF_NONE           = 0;
	public const int TF_POINT          = 1;
	public const int TF_LINEAR         = 2;
	public const int TF_ANISOTROPIC    = 3;
	public const int TF_ANISOTROPICX4  = 4;
	public const int TF_ANISOTROPICX8  = 5;
	public const int TF_ANISOTROPICX16 = 6;

	// PixelShader versions
	public const int PS_1_1 = 0;
	public const int PS_1_2 = 1;
	public const int PS_1_3 = 2;
	public const int PS_1_4 = 3;
	public const int PS_2_0 = 4;
	public const int PS_3_0 = 5;

	// VertexShader versions
	public const int VS_1_1 = 0;
	public const int VS_2_0 = 1;
	public const int VS_3_0 = 2;

	// Matrix semantics
	public const int WORLD                         = 0;
	public const int WORLDVIEWPROJ                 = 1;
	public const int VIEWPROJ                      = 2;
	public const int VIEW                          = 3;
	public const int PROJ                          = 4;
	public const int WORLDVIEW                     = 5;
	public const int VIEWINVERSE                   = 6;
	public const int WORLDINVERSETRANSPOSE         = 15;
	public const int WORLDINVERSE                  = 16;
	public const int WORLDTRANSPOSE                = 17;
	public const int VIEWPROJINVERSE               = 18;
	public const int VIEWPROJINVERSETRANSPOSE      = 19;
	public const int VIEWTRANSPOSE                 = 20;
	public const int VIEWINVRSETRANSPOSE           = 21;
	public const int PROJINVERSE                   = 22;
	public const int PROJTRANSPOSE                 = 23;
	public const int PROJINVRSETRANSPOSE           = 24;
	public const int WORLDVIEWPROJTRANSPOSE        = 25;
	public const int WORLDVIEWPROJINVERSE          = 26;
	public const int WORLDVIEWPROJINVERSETRANSPOSE = 27;
	public const int WORLDVIEWTRANSPOSE            = 28;
	public const int WORLDVIEWINVERSE              = 29;
	public const int WORLDVIEWINVERSETRANSPOSE     = 30;

	// Antialiasing types
	public const int AANONE      = 0;
	public const int AA2SAMPLES  = 1;
	public const int AA3SAMPLES  = 2;
	public const int AA4SAMPLES  = 3;
	public const int AA5SAMPLES  = 4;
	public const int AA6SAMPLES  = 5;
	public const int AA7SAMPLES  = 6;
	public const int AA8SAMPLES  = 7;
	public const int AA9SAMPLES  = 8;
	public const int AA10SAMPLES = 9;
	public const int AA11SAMPLES = 10;
	public const int AA12SAMPLES = 11;
	public const int AA13SAMPLES = 12;
	public const int AA14SAMPLES = 13;
	public const int AA15SAMPLES = 14;
	public const int AA16SAMPLES = 15;

	// Camera fog mode
	public const int FOG_NONE     = 0;
	public const int FOG_LINEAR   = 1;

	// Camera projection mode
	public const int PROJ_DISABLE      = 0;
	public const int PROJ_PERSPECTIVE	= 1;
	public const int PROJ_ORTHOGRAPHIC = 2;

	// Entity FX flags
	public const int FX_NOTHING        = 0;
	public const int FX_FULLBRIGHT     = 1;
	public const int FX_VERTEXCOLOR    = 2;
	public const int FX_FLATSHADED     = 4;
	public const int FX_DISABLEFOG     = 8;
	public const int FX_DISABLECULLING = 16;
	public const int FX_NOALPHABLEND   = 32;

	// Entity blending modes
	public const int BLEND_ALPHA       = 1;
	public const int BLEND_MULTIPLY    = 2;
	public const int BLEND_ADD         = 3;
	public const int BLEND_PUREADD     = 4;

	// Compare functions
	public const int CMP_NEVER         = 1;
	public const int CMP_LESS          = 2;
	public const int CMP_EQUAL         = 3;
	public const int CMP_LESSEQUAL     = 4;
	public const int CMP_GREATER       = 5;
	public const int CMP_NOTEQUAL      = 6;
	public const int CMP_GREATEREQUAL  = 7;
	public const int CMP_ALWAYS        = 8;

	// Axis
	public const int AXIS_X    = 1;
	public const int AXIS_Y    = 2;
	public const int AXIS_Z    = 3;

	// Texture loading flags
	public const int FLAGS_COLOR             = 1;
	public const int FLAGS_ALPHA             = 2;
	public const int FLAGS_MASKED            = 4;
	public const int FLAGS_MIPMAPPED         = 8;
	public const int FLAGS_CLAMPU            = 16;
	public const int FLAGS_CLAMPV            = 32;
	public const int FLAGS_SPHERICALENVMAP   = 64;
	public const int FLAGS_CUBICENVMAP       = 128;
	public const int FLAGS_R32F              = 256;
	public const int FLAGS_SKIPCACHE         = 512;
	public const int FLAGS_VOLUMETEXTURE     = 1024;
	public const int FLAGS_ARBG16F           = 2048;
	public const int FLAGS_ARBG32F           = 4096;

	// Texture blending modes
	public const int TEXBLEND_NONE          = 0;
	public const int TEXBLEND_ALPHA         = 1;
	public const int TEXBLEND_MULTIPLY      = 2;
	public const int TEXBLEND_ADD           = 3;
	public const int TEXBLEND_DOT3          = 4;
	public const int TEXBLEND_LIGHTMAP      = 5;
	public const int TEXBLEND_SEPARATEALPHA = 6;

	// Cube map faces
	public const int FACE_LEFT     = 0;
	public const int FACE_FORWARD  = 1;
	public const int FACE_RIGHT    = 2;
	public const int FACE_BACKWARD = 3;
	public const int FACE_UP       = 4;
	public const int FACE_DOWN     = 5;

	// Entity animation types
	public const int ANIMATION_STOP      = 0;
	public const int ANIMATION_LOOP      = 1;
	public const int ANIMATION_PINGPONG  = 2;
	public const int ANIMATION_ONE       = 3;

	// Collision types
	public const int SPHERETOSPHERE  = 1;
	public const int SPHERETOBOX     = 3;
	public const int SPHERETOTRIMESH = 2;

	// Collision respones types
	public const int RESPONSE_STOP             = 1;
	public const int RESPONSE_SLIDING          = 2;
	public const int RESPONSE_SLIDING_DOWNLOCK = 3;

	// Entity picking modes
	public const int PICK_NONE     = 0;
	public const int PICK_SPHERE   = 1;
	public const int PICK_TRIMESH  = 2;
	public const int PICK_BOX      = 3;

	// Sprite view modes
	public const int SPRITE_FIXED    = 1;
	public const int SPRITE_FREE     = 2;
	public const int SPRITE_FREEROLL = 3;
	public const int SPRITE_FIXEDYAW = 4;

	// Joystick types
	public const int JOY_NONE    = 0;
	public const int JOY_DIGITAL = 1;
	public const int JOY_ANALOG  = 2;

	// Cubemap rendering modes
	public const int CUBEMAP_SPECULAR   = 1;
	public const int CUBEMAP_DIFFUSE    = 2;
	public const int CUBEMAP_REFRACTION = 3;

	// Shadow's blur levels
	public const int SHADOWS_BLUR_NONE = 0;
	public const int SHADOWS_BLUR_3    = 1;
	public const int SHADOWS_BLUR_5    = 2;
	public const int SHADOWS_BLUR_7    = 3;
	public const int SHADOWS_BLUR_11   = 4;
	public const int SHADOWS_BLUR_13   = 5;


	// primitives types
	public const int PRIMITIVE_POINTLIST     = 1;
	public const int PRIMITIVE_LINELIST      = 2;
	public const int PRIMITIVE_LINESTRIP     = 3;
	public const int PRIMITIVE_TRIANGLELIST  = 4;
	public const int PRIMITIVE_TRIANGLESTRIP = 5;
	public const int PRIMITIVE_TRIANGLEFAN   = 6;
	
	// line separator types
	public const int LS_NUL		= 0;
	public const int LS_CR		= 1;
	public const int LS_LF		= 2;
	public const int LS_CRLF	= 3;
	
	// physics: joint types
	public const int JOINT_POINT2POINT	= 0;
	public const int JOINT_6DOF			= 1;
	public const int JOINT_6DOFSPRING	= 2;
	public const int JOINT_HINGE		= 3;
	
	// physics: debug drawer modes
	public const int PXDD_NO           = 0;
	public const int PXDD_WIREFRAME    = 1;
	public const int PXDD_AABB         = 2;
	public const int PXDD_CONTACTS     = 4;
	public const int PXDD_JOINTS       = 8;
	public const int PXDD_JOINT_LIMITS = 16;
	public const int PXDD_NO_AXIS      = 32;

	// physics: ray casting modes
	public const int PXRC_SINGLE   = 0;
	public const int PXRC_MULTIPLE = 1;

	// 3dlines commands
	[DllImport("xors3d.dll", EntryPoint = "xCreateLine3D")]
	public static extern int CreateLine3D(float fromX, float fromY, float fromZ, float toX, float toY, float toZ, int red, int green, int blue, int alpha, bool useZBuffer);

	public static int CreateLine3D(float fromX, float fromY, float fromZ, float toX, float toY, float toZ, int red, int green, int blue, int alpha)
	{
		return CreateLine3D(fromX, fromY, fromZ, toX, toY, toZ, red, green, blue, alpha, true);
	}
	public static int CreateLine3D(float fromX, float fromY, float fromZ, float toX, float toY, float toZ, int red, int green, int blue)
	{
		return CreateLine3D(fromX, fromY, fromZ, toX, toY, toZ, red, green, blue, 255, true);
	}
	public static int CreateLine3D(float fromX, float fromY, float fromZ, float toX, float toY, float toZ, int red, int green)
	{
		return CreateLine3D(fromX, fromY, fromZ, toX, toY, toZ, red, green, 255, 255, true);
	}
	public static int CreateLine3D(float fromX, float fromY, float fromZ, float toX, float toY, float toZ, int red)
	{
		return CreateLine3D(fromX, fromY, fromZ, toX, toY, toZ, red, 255, 255, 255, true);
	}
	public static int CreateLine3D(float fromX, float fromY, float fromZ, float toX, float toY, float toZ)
	{
		return CreateLine3D(fromX, fromY, fromZ, toX, toY, toZ, 255, 255, 255, 255, true);
	}
	[DllImport("xors3d.dll", EntryPoint = "xLine3DOrigin")]
	public static extern void Line3DOrigin(int line3d, float x, float y, float z, bool isGlobal);

	public static void Line3DOrigin(int line3d, float x, float y, float z)
	{
		 Line3DOrigin(line3d, x, y, z, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xLine3DAddNode")]
	public static extern void Line3DAddNode(int line3d, float x, float y, float z, bool isGlobal);

	public static void Line3DAddNode(int line3d, float x, float y, float z)
	{
		 Line3DAddNode(line3d, x, y, z, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xLine3DColor")]
	public static extern void Line3DColor(int line3d, int red, int green, int blue, int alpha);

	[DllImport("xors3d.dll", EntryPoint = "xLine3DUseZBuffer")]
	public static extern void Line3DUseZBuffer(int line3d, bool state);

	[DllImport("xors3d.dll", EntryPoint = "xLine3DOriginX")]
	public static extern float Line3DOriginX(int line3d, bool isGlobal);

	public static float Line3DOriginX(int line3d)
	{
		return Line3DOriginX(line3d, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xLine3DOriginY")]
	public static extern float Line3DOriginY(int line3d, bool isGlobal);

	public static float Line3DOriginY(int line3d)
	{
		return Line3DOriginY(line3d, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xLine3DOriginZ")]
	public static extern float Line3DOriginZ(int line3d, bool isGlobal);

	public static float Line3DOriginZ(int line3d)
	{
		return Line3DOriginZ(line3d, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xLine3DNodesCount")]
	public static extern int Line3DNodesCount(int line3d);

	[DllImport("xors3d.dll", EntryPoint = "xLine3DNodePosition")]
	public static extern void Line3DNodePosition(int line3d, int index, float x, float y, float z, bool isGlobal);
